# kastlewatch

./: .dockerignore  Cargo.toml  Dockerfile  LICENSE  config.toml  google-tcp-monitor.yaml  index.yaml
.github/workflows/: ci.yaml  release.yml
charts/kastlewatch/: Chart.yaml  values.yaml
charts/kastlewatch/templates/: _helpers.tpl  configmap.yaml  deployment-controller.yaml  deployment-worker.yaml  rbac.yaml  service-worker.yaml  serviceaccount.yaml
docs/: api-reference.md
scripts/: generate_docs.sh
src/: lib.rs  main.rs
src/controller/: common.rs  controller.rs  crd_manager.rs  mod.rs
src/shared/: context.rs  mod.rs  settings.rs
src/shared/resources/: common.rs  mod.rs  worker.rs
src/shared/resources/monitors/: mod.rs
src/shared/resources/monitors/http_monitor/: v1alpha1.rs
src/shared/resources/monitors/tcp_monitor/: mod.rs  v1alpha1.rs
src/shared/resources/notifiers/: mod.rs
src/shared/resources/notifiers/discord_notifier/: v1alpha1.rs
src/worker/: server.rs
tests/: controller_common_test.rs  discord_notification_test.rs  http_monitor_test.rs  integration_test.rs
tests/common/: mod.rs
