[package]
name = "kastlewatch"
version = "0.1.0"
edition = "2024"

[dependencies]
kube = { version = "0.96.0", features = ["runtime", "derive", "client"] }
k8s-openapi = { version = "0.23.0", features = ["v1_28"] }
tokio = { version = "1.0", features = ["macros", "rt-multi-thread", "fs", "process", "sync"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
schemars = "0.8"
futures = "0.3"
tracing = "0.1"
tracing-subscriber = "0.3"
thiserror = "1.0"
anyhow = "1.0"
clap = { version = "4.0", features = ["derive"] }
axum = "0.7"
reqwest = { version = "0.11", features = ["json"] }
chrono = { version = "0.4", features = ["serde"] }
config = "0.13"
serde_yaml = "0.9.34"
base64 = "0.22.1"

[dev-dependencies]
testcontainers = { version = "0.25.0" }
testcontainers-modules = { version = "0.13.0", features = ["k3s"] }
tempfile = "3.8"
tower-test = "0.4"
hyper = "1.0"
http = "1.0"
ctor = "0.2"
wiremock = "0.6.5"

